TestCases/Errors/print.cd
Int main()
{

    Int a = 0;

    Print("%I %I\n",a);

    Print("%I)
    
    Print("Hello World!")


}